# sidekwest

./: .gitignore  pyproject.toml
campaign_bot/cogs/: campaign.py
campaign_bot/storage/: __init__.py  local_file.py
python/: pyproject.toml
python/sidekwest/: bot.py  campaign.py
python/sidekwest/cli/: __init__.py
python/sidekwest/cogs/: campaign.py
python/sidekwest/storage/: base.py  local_file.py
rust/: Cargo.toml
rust/.data/: .gitignore
rust/migrations/: 20230710234734_Users_Table.up.sql  20230712204110_Campaigns_Table.up.sql
rust/src/: campaign.rs  events.rs  main.rs
rust/src/storage/: base.rs  local_file.rs  mod.rs
sidekwest/: __init__.py  bot.py
sidekwest/cli/: state.py
sidekwest/cogs/: campaign.py
sidekwest/storage/: __init__.py  base.py  local_file.py
