[tool.poetry]
name = "campaign-bot"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
py-cord = {extras = ["speed"], version = "^2.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"

[tool.poetry.scripts]
campaign-bot = "campaign_bot.bot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
